--- a/job_listing_page.html
+++ b/job_listing_page.html
@@ -226,8 +226,6 @@
         async function fetchJobs() {
             loadingIndicator.classList.remove('hidden');
             try {
-                // *** هذا هو التغيير الذي تم إجراؤه ***
-                // تم تغيير "jops" إلى "All_jops"
                 const querySnapshot = await getDocs(collection(db, "All_jops"));
 
                 allJobs = querySnapshot.docs.map(docSnapshot => {
@@ -292,7 +290,7 @@
                             <div class="flex flex-wrap items-center justify-between">
                                 <div class="flex items-center text-gray-500 text-sm">
                                     <i class="fas fa-clock ml-1"></i>
-                                    <span>منذ ${getTimeElapsed(job.timestamp)}</span>
+                                    <span>${getTimeElapsed(job.timestamp)}</span>
                                 </div>
                                 <div class="flex space-x-3 rtl:space-x-reverse">
                                     <a href="job_details.html?jobId=${job.id}" class="px-4 py-2 bg-gray-100 text-gray-800 rounded-lg hover:bg-gray-200 text-sm">
@@ -342,21 +340,33 @@
             }
         }
 
+        // *** هذه هي الدالة المعدلة لمعالجة الوقت ***
         function getTimeElapsed(timestamp) {
-            if (!timestamp || typeof timestamp.toDate !== 'function') return 'غير محدد';
-            const jobDate = timestamp.toDate();
+            if (!timestamp) return 'غير محدد';
+
+            let jobDate;
+            // تحقق مما إذا كانت القيمة هي كائن Date أو Timestamp (firebase)
+            if (typeof timestamp.toDate === 'function') {
+                jobDate = timestamp.toDate();
+            } else {
+                // إذا كانت نصًا، قم بتحويلها إلى كائن Date
+                jobDate = new Date(timestamp);
+            }
+
             const now = new Date();
             const diffInSeconds = Math.floor((now - jobDate) / 1000);
 
             const minutes = Math.floor(diffInSeconds / 60);
             const hours = Math.floor(minutes / 60);
             const days = Math.floor(hours / 24);
-            const weeks = Math.floor(days / 7);
+            const months = Math.floor(days / 30);
+            const years = Math.floor(days / 365);
 
-            if (weeks > 0) return `منذ ${weeks} أسبوع`;
-            if (days > 0) return `منذ ${days} يوم`;
-            if (hours > 0) return `منذ ${hours} ساعة`;
-            if (minutes > 0) return `منذ ${minutes} دقيقة`;
+            if (years > 0) return `منذ ${years} سنة${years > 1 ? '' : ''}`;
+            if (months > 0) return `منذ ${months} شهر${months > 1 ? '' : ''}`;
+            if (days > 0) return `منذ ${days} يوم${days > 1 ? '' : ''}`;
+            if (hours > 0) return `منذ ${hours} ساعة${hours > 1 ? '' : ''}`;
+            if (minutes > 0) return `منذ ${minutes} دقيقة${minutes > 1 ? '' : ''}`;
             return 'الآن';
         }
 
